--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +11,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <!-- Mio Css -->
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
+    <!-- Header / TopBar -->
+    <header>
+
+    </header>
+
+    <div class="wrapper">
+        <!-- Sidebar (Left)-->
+        <div class="sidebar">
+
+        </div>
+
+        <!-- Main (Right) -->
+        <Main class="wrapper-jr">
+            <!-- Header blu / Summary -->
+            <section class="summary">
+
+            </section>
+            <!-- Sezione con dati e tabelle / Boards -->
+            <section class="boards">
+
+            </section>
+
+        </Main>            
+
+    </div>
     
 </body>
 </html>
