structure_with_colored_boxes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     </header>
 
-    <div class="wrapper">
+    <div class="wrapper d-flex">
         <!-- Sidebar (Left)-->
         <div class="sidebar">
 
@@ -33,12 +33,44 @@
             </section>
             <!-- Sezione con dati e tabelle / Boards -->
             <section class="boards">
-
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum rerum voluptate, similique fugiat magnam, deleniti quam dolorum non expedita numquam eaque reiciendis temporibus ratione deserunt iste suscipit cumque. Iusto, doloremque.
+                Sint aliquid molestias voluptate, distinctio id natus aliquam ratione impedit earum labore quidem laborum quo corporis quae voluptatum eius culpa odit dolores rerum! Voluptatum, amet laborum alias accusamus distinctio vitae!
+                Culpa sed, harum ipsam temporibus doloribus fugiat asperiores repellat at excepturi, accusantium nulla quisquam provident, qui consequatur quia adipisci dolorum veritatis officia sit facilis. Laboriosam, molestias. Inventore maiores aperiam minima.
+                Doloremque nobis dolores, ipsa beatae iure eveniet eligendi molestiae nulla unde temporibus, maiores explicabo cum consequatur amet doloribus deleniti aspernatur a! Consequatur natus totam repellendus, pariatur officiis vel laborum repudiandae?
+                Maiores adipisci vel voluptas ducimus totam obcaecati non distinctio, expedita quam dolor eligendi doloribus iste! Excepturi asperiores praesentium, in minus vero, atque at omnis porro fuga dignissimos voluptatibus culpa ipsam.
+                Dignissimos tempore quam, nihil quos eius quidem qui, tempora, dolores cupiditate reprehenderit dolorum esse. Est consequatur quisquam, nemo quibusdam, natus vel consectetur reprehenderit doloremque quia incidunt impedit ratione consequuntur et?
+                Laudantium provident ipsum odit alias ab quod. Aspernatur reiciendis voluptates quae vitae quod officia id commodi quasi blanditiis! Perspiciatis soluta veniam doloribus corrupti ipsam impedit ea temporibus blanditiis fugiat eius.
+                Vitae assumenda dolor labore non inventore, eius, deleniti ipsa ad nostrum temporibus delectus autem ex voluptates excepturi enim corporis illum provident aliquid distinctio? Nesciunt, hic nemo accusamus ducimus similique doloribus?
+                Suscipit reprehenderit sapiente ad omnis molestias ducimus aliquam ea. Doloribus unde corporis non quisquam possimus, officiis modi molestiae. Nobis, vel animi? Qui repellat tempore non cupiditate, aliquid eum molestiae consequatur?
+                Distinctio odio architecto unde consequuntur enim quidem, delectus impedit, sapiente quaerat dolore atque praesentium eos! Necessitatibus unde rem cupiditate quos tenetur dicta nesciunt, cumque, nisi quod excepturi, possimus distinctio et.
+                Delectus reprehenderit at dicta magnam molestias aliquam, voluptatum earum nesciunt, recusandae illo quo dolore similique quam velit aspernatur repellat natus! Ducimus quisquam quas nihil natus dolorem non veniam rerum expedita.
+                Sed nulla blanditiis dolorem tenetur similique, magnam delectus ullam, earum sunt debitis quas id neque cum obcaecati asperiores incidunt ipsum atque reiciendis rem, nostrum corporis voluptas mollitia cupiditate velit! Reiciendis.
+                Incidunt vitae maiores tempora ducimus perferendis voluptatem quisquam expedita! Suscipit sint odio consequuntur molestiae iusto vel sapiente vitae rem facere cumque distinctio, excepturi, laborum tenetur eaque placeat. Tenetur, inventore alias!
+                Mollitia corrupti sapiente iusto maiores repellendus labore, dolorum eum eligendi dicta magnam harum cupiditate praesentium saepe nobis eaque odit quisquam. Expedita suscipit iusto adipisci maiores exercitationem necessitatibus. Quos, porro eaque!
+                Facilis dignissimos obcaecati reiciendis? Vel doloribus iure ratione ipsa pariatur assumenda eius harum? Asperiores quod molestias adipisci, odit dolores expedita voluptatibus saepe sequi. Cum, quas aspernatur rem beatae consectetur perferendis.
+                Libero consequuntur impedit id magnam excepturi perferendis odio veritatis natus laborum, commodi eligendi quis, ex voluptate temporibus repellat doloribus alias blanditiis. Nesciunt eos deserunt tempora odit laborum. Dolore, laudantium odit!
+                Delectus dolorem expedita necessitatibus? Illum necessitatibus a culpa fugit explicabo quisquam quo ut recusandae. Similique impedit aperiam aut iste nam suscipit distinctio. Maiores praesentium et fugiat excepturi provident quas modi.
+                Velit, atque quo explicabo architecto ipsa ipsum reprehenderit eaque, laboriosam necessitatibus earum dolorum blanditiis iste voluptatum suscipit, soluta mollitia maiores. Aliquam natus facere ratione in doloremque perspiciatis cupiditate, voluptas itaque.
+                Nesciunt error odit mollitia iste illo praesentium enim esse et maiores consequuntur asperiores officia fuga fugiat voluptate ullam molestiae amet quae laborum corrupti aspernatur, vel nemo animi fugit ut? Suscipit.
+                Fugit accusantium rem vero sint quod aliquid iusto! Magnam officiis sunt quisquam repellendus autem, modi porro. Saepe earum animi, ut est facilis excepturi ipsam culpa impedit rerum iste magni quibusdam?
+                Culpa praesentium accusamus odio delectus nemo sit, illo, quos quae nulla nisi, repellat consequatur unde amet eveniet voluptatem aliquid nobis quod suscipit tempore eos esse! Illo molestiae quod excepturi cumque.
+                Eligendi, nemo ex. Tempora saepe incidunt atque voluptatibus qui dolore iure, architecto veniam, aperiam error totam vel, rerum nobis excepturi omnis sequi iste illum ex quis at nisi reprehenderit? Facilis?
+                Adipisci doloremque expedita consequatur blanditiis provident deleniti corrupti fugiat doloribus impedit maiores nam dolores ipsam, assumenda sit iste hic modi eos. Possimus, totam nisi obcaecati ipsam dignissimos quibusdam expedita molestiae.
+                Quia, corrupti commodi. Magni commodi esse aliquam veritatis corrupti nulla ullam unde, ipsum id facere odit totam doloribus, voluptates saepe! Eos sapiente consequuntur eius, molestias ut harum excepturi laboriosam quae!
+                Hic veritatis, incidunt praesentium qui cumque alias dolores tenetur delectus, numquam officia architecto dicta eos blanditiis voluptatum iusto obcaecati. Nobis ab saepe numquam inventore praesentium consequatur cumque, ex quo debitis!
+                Tenetur aperiam, sit, nihil necessitatibus iusto beatae architecto assumenda est itaque fugit nobis eius modi molestias atque, consequatur a sed amet ab quisquam sequi voluptatem facere officia alias? Nesciunt, neque.
+                Vitae rem omnis facere necessitatibus libero doloremque iste amet. Unde corporis voluptate ipsam perferendis accusantium ut libero nemo maxime dolores labore natus itaque suscipit consectetur autem quos, veritatis veniam quibusdam.
+                Tenetur fugiat deleniti similique culpa dolor rem aliquid aperiam, porro modi impedit pariatur numquam, beatae nesciunt quisquam velit molestiae voluptatibus ex eligendi! Dicta eum ex, deserunt fuga doloribus perferendis consequatur?
+                Aliquam optio ipsum repudiandae dignissimos perspiciatis facere dicta officiis. Dolores commodi voluptas eius vitae iusto, odio placeat inventore deserunt, vero doloribus iure asperiores totam similique ea, eveniet dolorum fugit. Non?
+                Numquam, officia aliquam consequatur possimus unde amet obcaecati at nisi veritatis delectus quis accusantium provident ipsa incidunt nobis! Rerum facilis eum molestias ut autem nulla saepe quasi vel enim explicabo?
             </section>
 
         </Main>            
 
     </div>
-    
+
+    <!-- Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
 </body>
 </html>
