--- a/index.html
+++ b/index.html
@@ -37,9 +37,36 @@
 
     <div class="wrapper d-flex">
         <!-- Sidebar (Left)-->
-        <div class="sidebar">
-
-        </div>
+        <nav class="sidebar d-flex flex-column align-items-center justify-content-between py-4">
+            <ul class="m-0 p-0">
+                <li>
+                    <a href="#">
+                        <i class="col-lg-4 fa-solid fa-house fa-1x"></i>
+                        <span class="d-none d-lg-block">Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="col-lg-4 fa-solid fa-chart-simple"></i>
+                        <span class="d-none d-lg-block">Stats</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="col-lg-4 fa-solid fa-signal"></i>
+                        <span class="d-none d-lg-block">Signals</span>
+                    </a>
+                </li>
+            </ul>
+            <ul class="m-0 p-0">
+                <li>
+                    <a href="#">
+                        <i class="col-lg-4 fa-solid fa-gear"></i>
+                        <span class="d-none d-lg-block">Admin</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
 
         <!-- Main (Right) -->
         <Main class="wrapper-jr">
