--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
 <body>
     <!-- Header / TopBar -->
-    <header>
-        <nav class="navbar">
+    <header class="topbar">
+        <nav class="navbar col-12">
             <div class="container-fluid d-flex">
                 <a class="navbar-brand col-2 m-0 p-0">
                     <img class="d-lg-none" src="asset/img/mobile-logo.png" alt="">
                     <img class="d-none d-lg-block" src="asset/img/logo.svg" alt="">
                 </a>
-              <form class="d-flex col-9" role="search">
+                <form class="d-flex col-9" role="search">
                 <input class="form-control" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
-              </form>
-              <ul class="d-flex justify-content-around col-1 align-items-center m-0 p-0">
+                </form>
+                <ul class="d-flex justify-content-around col-1 align-items-center m-0 p-0">
                     <li><i class="fa-solid fa-list-ul d-none d-lg-block"></i></li>                          
                     <li><i class="fa-solid fa-circle-question d-none d-lg-block"></i></li>
                     <li><i class="fa-solid fa-ellipsis-vertical d-none d-lg-block"></i></li>
@@ -35,9 +35,9 @@
           </nav>
     </header>
 
-    <div class="wrapper d-flex">
+    <div class="wrapper">
         <!-- Sidebar (Left)-->
-        <nav class="sidebar d-flex flex-column align-items-center justify-content-between py-4">
+        <nav class="sidebar py-4">
             <ul class="m-0 p-0">
                 <li>
                     <a href="#">
@@ -69,11 +69,11 @@
         </nav>
 
         <!-- Main (Right) -->
-        <Main class="wrapper-jr">
+        <Main>
             <!-- Header blu / Summary -->
-            <section class="summary">
+            <header class="summary">
 
-            </section>
+            </header>
             <!-- Sezione con dati e tabelle / Boards -->
             <section class="boards">
                 Lorem*30
@@ -85,6 +85,5 @@
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
 </body>
 </html>
