header_summary_completed

--- a/index.html
+++ b/index.html
@@ -71,8 +71,31 @@
         <!-- Main (Right) -->
         <Main>
             <!-- Header blu / Summary -->
-            <header class="summary">
+            <header class="summary container-fluid py-4 flex-md-row align-items-md-center row-cols-md-3">
+                <div class="new-student order-md-last">
+                    <p>Nuovo Studente</p>
+                    <i class="fa-solid fa-plus btn btn-outline-secondary"></i>
+                </div>
 
+                <div class="boolpian mb-2">
+                    <div class="d-flex align-items-baseline mb-2">
+                        <h1 class="my-0 me-2">Boolean</h1>
+                        <p class="badge rounded-pill">Piano blaze</p>
+                    </div>
+                    <ul class="d-flex p-0">
+                        <li class="badge rounded-pill">3 app</li>
+                        <li><i class="fa-solid fa-angles-right"></i></li>
+                        <li class="d-lg-none badge rounded-pill"><i class="fa-solid fa-plus"></i></li>
+                        <li class="d-none d-lg-block badge rounded-pill">Boolean mobile app</li>
+                        <li class="d-none d-lg-block badge rounded-pill">Boolean web app</li>
+                        <li class="d-none d-lg-block badge rounded-pill">Boolean blog app</li>
+                    </ul>
+                </div>
+
+                <div class="ol-student">
+                    <p>Studenti online negli ultimi 30 minuti</p>
+                    <div class="fs-2 mt-2">125</div>
+                </div>
             </header>
             <!-- Sezione con dati e tabelle / Boards -->
             <section class="boards">
