--- a/index.html
+++ b/index.html
@@ -72,17 +72,18 @@
         <Main>
             <!-- Header blu / Summary -->
             <header class="summary container-fluid py-4 flex-md-row align-items-md-center row-cols-md-3">
-                <div class="new-student order-md-last">
+
+                <div class="new-student order-md-last col-lg-2">
                     <p>Nuovo Studente</p>
                     <i class="fa-solid fa-plus btn btn-outline-secondary"></i>
                 </div>
 
-                <div class="boolpian mb-2">
+                <div class="boolpian mb-2 col-lg-7 col-xl-6">
                     <div class="d-flex align-items-baseline mb-2">
                         <h1 class="my-0 me-2">Boolean</h1>
                         <p class="badge rounded-pill">Piano blaze</p>
                     </div>
-                    <ul class="d-flex p-0">
+                    <ul class="d-flex p-0 mb-lg-0">
                         <li class="badge rounded-pill">3 app</li>
                         <li><i class="fa-solid fa-angles-right"></i></li>
                         <li class="d-lg-none badge rounded-pill"><i class="fa-solid fa-plus"></i></li>
@@ -92,7 +93,7 @@
                     </ul>
                 </div>
 
-                <div class="ol-student">
+                <div class="ol-student col-lg-3 col-xl-4">
                     <p>Studenti online negli ultimi 30 minuti</p>
                     <div class="fs-2 mt-2">125</div>
                 </div>
