--- a/index.html
+++ b/index.html
@@ -98,9 +98,130 @@
                     <div class="fs-2 mt-2">125</div>
                 </div>
             </header>
+
             <!-- Sezione con dati e tabelle / Boards -->
-            <section class="boards">
-                Lorem*30
+            <section class="boards container-fluid py-3">
+                <div class="row-left col-12 col-xl-8">
+                    <div class="next-classes">
+                        <h2>Prossime classi</h2>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col" class="col-6">Nome</th>
+                                    <th scope="col">Data inizio</th>
+                                    <th scope="col">ROI</th>
+                                    <th scope="col" >Stato</th>
+                                    <th scope="col">Azioni</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 75</td>
+                                    <td>15 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-success">Done</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 76</td>
+                                    <td>16 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-success">Done</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 77</td>
+                                    <td>17 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-warning">process</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 78</td>
+                                    <td>18 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-success">Done</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 79</td>
+                                    <td>19 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-danger">failed</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 80</td>
+                                    <td>20 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-success">Done</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 81</td>
+                                    <td>21 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-danger">failed</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <img src="asset/img/class-avatar.jpg" alt="">
+                                        Classe 82</td>
+                                    <td>22 Feb 2021</td>
+                                    <td>20%</td>
+                                    <td><span class="badge rounded-pill bg-success">Done</span></td>
+                                    <td>
+                                        <i class="fa-solid fa-pencil btn btn-outline-secondary"></i>
+                                        <i class="fa-solid fa-trash btn btn-outline-secondary"></i>
+                                    </td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                    </div>
+                    <div class="FAQ">
+
+                    </div>
+                </div>
+                <div class="row row-right">
+
+                </div>
             </section>
 
         </Main>            
